fix: Bugs are fixed swagger, routes, and controllers
